--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,19 +19,24 @@ body {
   text-align: center;
 }
 
-#createGroupSection {
+#addGroupSection {
   position: fixed;
   bottom: 100px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 80%;
-  max-height: 40%;
-  overflow-y: auto;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 20px;
-  padding: 20px;
-  display: none;
+  right: 10px;
+  width: 93%;
+  background-color: #eee7ed;
+  height: 40vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  z-index: 100000;
+  border-radius: 17px;
+  padding: 40px;
+}
 
+.menu_create {
+  position: relative;
+  z-index: 0;
+  margin-bottom: 115px;
 }
 
 
