--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
   <a class="icon-button" data-action="click->navbar#reveal" >
     <i class="fa-solid fa-plus"></i>
   </a>
-  <div id="addDocumentSection" class="d-none" data-navbar-target="form">
+  <div id="addDocumentSection" class="d-none py-3 px-2" data-navbar-target="form">
       <h2>Add Document</h2>
       <%= simple_form_for Document.new do |f| %>
         <%= f.input :photo, as: :file %>
