--- a/app/views/assignements/new.html.erb
+++ b/app/views/assignements/new.html.erb
@@ -1,31 +1,25 @@
-<h1>New Assignement</h1>
-
-<%= form_with(model: [@document, @assignement], local: true) do |form| %>
-  <% if @assignement.errors.any? %>
+<h1>New Assignment</h1>
+<%= form_with(model: [@document, @assignment], local: true) do |form| %>
+  <% if @assignment.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@assignement.errors.count, "error") %> prohibited this assignement from being saved:</h2>
-
+      <h2><%= pluralize(@assignment.errors.count, "error") %> prohibited this assignment from being saved:</h2>
       <ul>
-      <% @assignement.errors.full_messages.each do |message| %>
+      <% @assignment.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
-
   <div class="field">
     <%= form.label :user_id %>
     <%= form.collection_select :user_id, @users, :id, :username, prompt: "Select a user" %>
   </div>
-
   <div class="field">
     <%= form.label :comment %>
     <%= form.text_area :comment %>
   </div>
-
   <div class="actions">
     <%= form.submit 'Assign' %>
   </div>
 <% end %>
-
 <%= link_to 'Back', document_path(@document), class: "btn btn-secondary" %>
