--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -16,11 +16,17 @@
   <p><strong>Group:</strong> <%= @document.group.title %></p>
 
   <% if @document.assignements.any? %>
-    <% @document.assignements.each do |assignement| %>
-        Assigned to: <%= assignement.user.username %> - Comment: <%= assignement.comment %>
-    <% end %>
-<% end %>
+    <h4 class="mt-4">Assignments</h4>
+    <ul class="list-group">
+      <% @document.assignements.each do |assignement| %>
+        <li class="list-group-item">
+          Assigned to: <%= assignement.user.username %> - Comment: <%= assignement.comment %>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
 
   <%= link_to 'Back', documents_path, class: 'btn btn-secondary mt-3' %>
-  <%= link_to 'Assign this document', new_document_assignement_path(@document), class: "btn btn-primary" %>
+  <%= link_to 'Assign this document', new_document_assignement_path(@document), class: "btn btn-primary mt-3" %>
 </div>
+
