--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,4 @@
   </div>
 </div>
 
-<button class= "btn btn-outline-light">
-  <h2> My Groupes </h2>
-</button>
-
+<a href="/groups">My groups</a>
