--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,6 @@
   </div>
 </div>
 
-<button class= "btn btn-outline-light">
-  <h2> My Groupes </h2>
-</button>
-
+<a href = "<%= groups_path %>" class="btn btn-outline-light">
+<h2>My Groups</h2>
+</a>
