--- a/app/views/assignements/new.html.erb
+++ b/app/views/assignements/new.html.erb
@@ -1,25 +1,29 @@
-<h1>New Assignment</h1>
-<%= form_with(model: [@document, @assignment], local: true) do |form| %>
-  <% if @assignment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@assignment.errors.count, "error") %> prohibited this assignment from being saved:</h2>
+<h1 class="page-title">New Assignement</h1>
+
+<%= simple_form_for([@document, @assignement], html: { class: 'assigenment-form w-100 px-4' } )do |form| %>
+  <% if @assignement.errors.any? %>
+    <div id="error_explanation" class="error-messages">
+      <h2><%= pluralize(@assignement.errors.count, "error") %> prohibited this assignement from being saved:</h2>
       <ul>
-      <% @assignment.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @assignement.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.collection_select :user_id, @users, :id, :username, prompt: "Select a user" %>
+
+  <div class="form-group">
+    <%#= form.label :user_id, class: 'form-label' %>
+    <%= form.association :user, collection: @users, value_method: :id, label_method: :username, prompt: "Select a user", class: 'form-control' %>
   </div>
-  <div class="field">
-    <%= form.label :comment %>
-    <%= form.text_area :comment %>
+
+  <div class="form-group">
+    <%#= form.label :comment, class: 'form-label' %>
+    <%= form.input :comment, class: 'form-control' %>
   </div>
-  <div class="actions">
-    <%= form.submit 'Assign' %>
+
+  <div class="form-actions">
+    <%= link_to 'Back', document_path(@document), class: "btn btn-secondary" %>
+    <%= form.submit 'Assign', class: 'btn btn-primary' %>
   </div>
 <% end %>
-<%= link_to 'Back', document_path(@document), class: "btn btn-secondary" %>
