--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <body>
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
+    <body style="background: url('<%= asset_path("background.png") %>') no-repeat center center fixed; background-size: cover; margin: 0;">
+
     <%= yield %>
   </body>
 </html>
