--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,9 +1,8 @@
-<!-- app/views/documents/index.html.erb -->
-<h1 class="text-center my-4" style="font-size: 2.5rem; color: #6a1b9a; font-weight: bold; text-transform: uppercase; letter-spacing: 2px;">
+<h1 class="text-center my-4" style="font-size: 2.5rem; color: #6a1b9a; font-weight: bold; text-transform: uppercase; letter-spacing: 2px; position: sticky; top: 0; background-color: #EEE7ED; z-index: 1020;">
   <i class="fas fa-file-alt"></i> Documents
 </h1>
 
-<div class="container" style="max-width: 1200px; margin: 0 auto; background-color: #EEE7ED; border-radius: 10px; padding: 20px;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; background-color: #EEE7ED; border-radius: 25px; padding: 20px; height: calc(100vh - 80px); overflow: hidden;">
   <div class="row mb-4">
     <div class="col-12 text-right">
       <% if Group.any? %>
@@ -13,8 +12,8 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <div class="table-responsive">
-        <table class="table table-hover table-bordered table-striped align-middle">
+      <div class="table-container" style="border-radius: 25px; overflow: auto; height: calc(100vh - 190px);">
+        <table class="table table-hover table-bordered table-striped align-middle" style="border-radius: 25px; overflow: hidden;">
           <thead style="background-color: #8e24aa; color: #ffffff;">
             <tr>
               <th scope="col">Title</th>
