--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,18 +11,30 @@
     </div>
   <% end %>
 </div>
+<% @group.documents.each do |document| %>
+  <div class="document">
+    <div class="doccard">
+      <% if document.photo.attached? %>
+        <%= link_to group_document_path(@group, document) do %>
+            <%= image_tag url_for(document.photo), class: "image-doc" %>
+          <h3><%= document.title %></h3>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+<% end %>
 
-<button type="button" class="button-34" data-bs-toggle="modal" data-bs-target="#exampleModal">
+<button type="button" style="margin-bottom: 10px" class="button-34" data-bs-toggle="modal" data-bs-target="#exampleModal">
   Add members
 </button>
 
-<a href="/groups" class="btn btn-primary">Back</a>
+<a href="/groups">Back</a>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Add Members</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -36,15 +48,12 @@
               <label for="user_<%= user.id %>"><%= user.username %></label>
             </div>
           <% end %>
-          </div>
           <div class="form-example">
-            <input type="submit" value="Subscribe!" />
-          </div>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="button" data-bs-dismiss="modal">Close</button>
+        <input type="submit" class="button-34" value="Add" style="padding: 8px 18px" />
       </div>
     </div>
   </div>
