--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <div class="table-container" style="border-radius: 25px; overflow: auto; height: calc(100vh - 190px);">
+      <div class="table-container" style="border-radius: 25px; overflow: auto; height: calc(100vh - 210px);">
         <table class="table table-hover table-bordered table-striped align-middle" style="border-radius: 25px; overflow: hidden;">
           <thead style="background-color: #8e24aa; color: #ffffff;">
             <tr>
@@ -27,10 +27,10 @@
                 <td style="font-weight: bold; font-size: 1.2rem; color: #6a1b9a;"><%= document.title %></td>
                 <td style="font-size: 1rem; text-decoration: underline; color: #ab47bc;"><%= document.category %></td>
                 <td class="text-center">
-                  <%= link_to group_document_path(document.group, document), class: 'btn btn-outline-primary btn-sm mx-1', style: 'border-radius: 12px; padding: 6px 12px; color: #6a1b9a; border-color: #6a1b9a;' do %>
+                  <%= link_to group_document_path(document.group, document), class: 'btn btn-outline-primary btn-sm mx-2 mb-1', style: 'border-radius: 12px; padding: 4px 8px; color: #6a1b9a; border-color: #6a1b9a;' do %>
                     <i class="fas fa-eye"></i> Show
                   <% end %>
-                  <%= button_to document_path(document), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger btn-sm mx-1', form: { 'data-turbo': 'false' }, style: 'border-radius: 12px; padding: 6px 12px; color: #d32f2f; border-color: #d32f2f;' do %>
+                  <%= button_to document_path(document), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger btn-sm mx-2', form: { 'data-turbo': 'false' }, style: 'border-radius: 12px; padding: 4px 8px; color: #d32f2f; border-color: #d32f2f;' do %>
                     <i class="fas fa-trash-alt"></i> Delete
                   <% end %>
                 </td>
