--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -70,7 +70,6 @@ body {
   display: block;
   color: #954caf;
   text-align: center;
-  padding: 10px;
   text-decoration: none;
   font-size: 17px;
 }
@@ -83,17 +82,17 @@ body {
 .navbar i {
   color: rgb(54, 0, 52);
   font-size: 24px;
+  padding: 8px;
 }
 
 .navbar a[href="#Add"] i {
   font-size: 45px;
-  color: rgb(107, 148, 219);
+  color: rgb(255, 255, 255);
 }
 
 .btn.btn-outline-light {
   background-color: #ffffff;
   border: 1px solid #ffffff;
-  padding: 10px 20px;
   border-radius: 25px;
 }
 
@@ -101,4 +100,15 @@ body {
   margin: 0;
   font-size: 16px;
   color: #4c013d;
+}
+
+a.icon-button.btn-primary {
+  border-radius: 30%;
+  font-size: 14px;
+  padding: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 3px;
+  margin-bottom: 1px;
+  color:#e3e5e6f9;
 }
