--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
     <i class="fa-regular fa-folder-open"></i>
   <% end %>
 
-  <a class="icon-button btn-primary" data-action="click->navbar#reveal" >
+  <a class="icon-button" data-action="click->navbar#reveal" >
     <i class="fa-solid fa-plus"></i>
   </a>
   <div id="addDocumentSection" class="d-none py-3 px-2" data-navbar-target="form">
