--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,3 +1,5 @@
+    <body style="background: url('<%= asset_path("fallingdoc.png") %>') no-repeat center center fixed; background-size: cover; margin: 0;">
+
 <h1>Members</h1>
 <style>
   .document-card {
