--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,13 +3,6 @@
 </h1>
 
 <div class="container" style="max-width: 1200px; margin: 0 auto; background-color: #EEE7ED; border-radius: 25px; padding: 20px; height: calc(100vh - 80px); overflow: hidden;">
-  <div class="row mb-4">
-    <div class="col-12 text-right">
-      <% if Group.any? %>
-        <% first_group = Group.first %>
-      <% end %>
-    </div>
-  </div>
   <div class="row">
     <div class="col-12">
       <div class="table-container" style="border-radius: 25px; overflow: auto; height: calc(100vh - 210px);">
@@ -17,19 +10,17 @@
           <thead style="background-color: #8e24aa; color: #ffffff;">
             <tr>
               <th scope="col">Group Title</th>
-              <th scope="col" class="text-center">Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @groups.each do |group| %>
-              <tr>
-                <td style="font-weight: bold; font-size: 1.2rem; color: #6a1b9a;">
-                  <%= link_to group.title, group_path(group), style: 'color: #6a1b9a;' %>
-                </td>
-                <td class="text-center">
-                  <%= button_to group_path(group), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger btn-sm mx-2', style: 'border-radius: 12px; padding: 4px 8px; color: #d32f2f;border-color: #d32f2f;' do %>
-                    <i class="fas fa-trash-alt"></i> Delete
-                  <% end %>
+                </tr>
+                  </thead>
+                    <tbody>
+                      <% @groups.each do |group| %>
+                        <tr>
+                          <td style="font-weight: bold; font-size: 1.2rem; color: #6a1b9a;">
+                          <div style="display: flex; justify-content: flex-start; align-items: flex-start;">
+                        <% if group.photo.attached? %>
+                      <%= image_tag url_for(group.photo), class: "image-doc" %>
+                    <% end %>
+                   <%= link_to group.title, group_path(group), style: 'color: #6a1b9a;' %>
                 </td>
               </tr>
             <% end %>
