--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,8 +1,22 @@
-<h1 class="text-center my-4" style="font-size: 2.5rem; color: #6a1b9a; font-weight: bold; text-transform: uppercase; letter-spacing: 2px; position: sticky; top: 0; background-color: #EEE7ED; z-index: 1020;">
-  <i class="fas fa-file-alt"></i> Document Detail
+<style>
+        .fixed-bottom-icons {
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            display: flex;
+            justify-content: flex-end;
+            gap: 10px;
+            width: calc(100% - 40px);
+        }
+    </style>
+</head>
+<body>
+
+<h1 class="text-center my-6" style="font-size: 2.5rem; color: #d4b6d3; font-weight: bold; text-transform: uppercase; letter-spacing: 2px; position: sticky; top: 0; background-color: rgba(238, 231, 237, 0); z-index: 1020;">
+   Details
 </h1>
 
-<div class="container" style="max-width: 1200px; margin: 0 auto; background-color: #EEE7ED; border-radius: 25px; padding: 20px; overflow-y: auto; height: calc(100vh - 150px);">
+<div class="container" style="max-width: 400px; margin: 41px auto; background-color: #EEE7ED; border-radius: 25px; padding: 20px; height: calc(85vh - 80px); overflow: hidden; position: relative;">
   <% if @document.photo.present? && @document.photo.key.present? %>
     <div class="h-40 mb-4" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(@document.photo.key, height: 300, crop: :fill) %>'); height: 20vh; border-radius: 25px; background-size: cover; background-position: center;">
     </div>
@@ -30,11 +44,13 @@
         </ul>
       <% end %>
 
-      <div style="margin-top: 25px;" class="d-flex justify-content-end">
-        <%= link_to 'Back', documents_path, class: 'btn btn-outline-primary btn-sm mx-2', style: 'border-radius: 12px; padding: 6px 12px; color: #6a1b9a; border-color: #6a1b9a;' %>
+      <div class="fixed-bottom-icons">
+        <%= link_to documents_path, class: 'btn btn-outline-primary btn-sm mx-2', style: 'border-radius: 12px; padding: 6px 12px; color: #6a1b9a; border-color: #6a1b9a;' do %>
+          <i class="fa-solid fa-arrow-left"></i>
+        <% end %>
         <%= link_to 'Assign this document', new_document_assignement_path(@document), class: 'btn btn-outline-primary btn-sm mx-2', style: 'border-radius: 12px; padding: 6px 12px; color: #6a1b9a; border-color: #6a1b9a;' %>
         <button type="button" class="btn btn-outline-primary btn-sm mx-2" style="border-radius: 12px; padding: 6px 12px; color: #6a1b9a; border-color: #6a1b9a;" data-bs-toggle="modal" data-bs-target="#viewDocumentModal">
-          <i class="fas fa-expand"></i> View Document
+          <i class="fa-solid fa-arrows-to-eye"></i>
         </button>
       </div>
     </div>
