--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -74,14 +74,10 @@ input[type="submit"] {
 
 }
 
-input[type="submit"]:hover {
-  background-color: #954caf;
-  font-size: larger;
-}
 
 .icon-button i {
   font-size: 50px;
-  color: #6ba4cd;
+  color: #eeeeee;
   position:relative;
 
 }
