--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <a href="<%= groups_path %>" class="btn btn-outline-light">
-  <h2>My Groups</h2>
+  <h2>See all</h2>
 </a>
 
 <!-- Add Group Modal -->
