--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,12 @@
 <div class="top-bar" style="position: absolute; top: 0; right: 0;">
   <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" style="margin-right: 20px; margin-top: 20px;" >
 </div>
-<h2>My groups</h2>
+<div class="container" style="">
+<h2>My last group</h2>
+</div>
+<div class="card">
+  <%=  @group.title %>
+</div>
 <div class="menu_create" data-controller="home">
   <a class="icon-button" data-bs-toggle="modal" data-bs-target="#addGroupModal">
     <i class="fa-solid fa-users-rays"></i>
@@ -12,7 +17,6 @@
   <h2>My Groups</h2>
 </a>
 
-<!-- Add Group Modal -->
 <div class="modal fade" id="addGroupModal" tabindex="-1" aria-labelledby="addGroupModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
