--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="menu_create" data-controller="home">
   <a class="icon-button" data-bs-toggle="modal" data-bs-target="#addGroupModal">
-    <i class="fa-solid fa-users-rays"></i>
+  <i class="fa-solid fa-people-roof"></i>
   </a>
 </div>
 
