--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -29,10 +29,8 @@
   <div class="row">
     <div class="col-12">
       <h3 style="font-weight: bold; font-size: 1.5rem; color: #6a1b9a; margin-bottom: 25px;"><%= @document.title %></h3>
-      <p><strong>Category:</strong> <%= @document.category %></p>
       <p><strong>User:</strong> <%= @document.user.username %></p>
       <p><strong>Group:</strong> <%= @document.group.title %></p>
-
       <% if @document.assignements.any? %>
         <h4 style="font-weight: bold; font-size: 1.2rem; color: #6a1b9a; margin-top: 20px;">Assignments</h4>
         <ul class="list-group mb-3">
@@ -43,8 +41,7 @@
           <% end %>
         </ul>
       <% end %>
-
-      <div class="fixed-bottom-icons">
+      <div class="fixed-bottom-icons" style="display: flex; justify-content: center;">
         <%= link_to documents_path, class: 'btn btn-outline-primary btn-sm mx-2', style: 'border-radius: 12px; padding: 6px 12px; color: #6a1b9a; border-color: #6a1b9a;' do %>
           <i class="fa-solid fa-arrow-left"></i>
         <% end %>
