--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -10,17 +10,18 @@
           <thead style="background-color: #8e24aa; color: #ffffff;">
             <tr>
               <th scope="col">Group Title</th>
-                </tr>
-                  </thead>
-                    <tbody>
-                      <% @groups.each do |group| %>
-                        <tr>
-                          <td style="font-weight: bold; font-size: 1.2rem; color: #6a1b9a;">
-                          <div style="display: flex; justify-content: flex-start; align-items: flex-start;">
-                        <% if group.photo.attached? %>
+            </tr>
+          </thead>
+          <tbody>
+            <% @groups.each do |group| %>
+              <tr>
+                <td style="font-weight: bold; font-size: 1.2rem; color: #6a1b9a; border-bottom: none;">
+                  <div style="display: flex; justify-content: flex-start; align-items: flex-start;">
+                    <% if group.photo.attached? %>
                       <%= image_tag url_for(group.photo), class: "image-doc" %>
                     <% end %>
-                   <%= link_to group.title, group_path(group), style: 'color: #6a1b9a;' %>
+                    <%= link_to group.title, group_path(group), style: 'color: #6a1b9a; text-decoration: none; margin-left: 10px;' %>
+                  </div>
                 </td>
               </tr>
             <% end %>
@@ -30,9 +31,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
