--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
- 
+<!-- app/views/shared/_navbar.html.erb -->
 <div class="navbar" data-controller="navbar">
   <%= link_to home_path, class: controller_name == "pages" && action_name == "home" ? "active" : "" do %>
     <i class="fa-solid fa-house"></i>
@@ -8,7 +8,6 @@
     <i class="fa-regular fa-folder-open"></i>
   <% end %>
   <a class="icon-button plus-btn" data-bs-toggle="modal" data-bs-target="#addDocumentModal">
-
     <i class="fa-solid fa-plus"></i>
   </a>
 
