--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -20,17 +20,22 @@
   </div>
 
   <div id="chat-messages" class="messages">
-    <% first_date = @messages.first.created_at.strftime("%b %d") %>
-    <% @messages.each do |message| %>
-      <div class="message text-white d-flex flex-column">
-        <% if message.created_at.strftime("%b %d") != first_date || message == @messages.first %>
-          <div >
-            <strong><%= message.user.username %> - <%= message.created_at.strftime("%b %d") %></strong>
-          </div>
-          <% first_date = message.created_at.strftime("%b %d") %>
-        <% end %>
-        <p><%= message.content %></p>
-      </div>
+    <% if @messages.count == 0 %>
+      <p style="color:white">No messages yet</p>
+    <% else %>
+      <% first_date = @messages.first.created_at.strftime("%b %d") %>
+      <% @messages.each do |message| %>
+        <div class="message text-white d-flex flex-column">
+          <% if message.created_at.strftime("%b %d") != first_date || message == @messages.first %>
+            <div >
+              <strong><%= message.user.username %> - <%= message.created_at.strftime("%b %d") %></strong>
+            </div>
+            <% first_date = message.created_at.strftime("%b %d") %>
+          <% end %>
+          <p><%= message.content %></p>
+        </div>
+      <% end %>
+
     <% end %>
   </div>
 
