--- a/app/assets/stylesheets/components/_doc_image.scss
+++ b/app/assets/stylesheets/components/_doc_image.scss
@@ -4,3 +4,15 @@
   border-radius: 10px;
   margin-right: 20px;
 }
+
+.image-doc-home {
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+.doc-home {
+  margin-bottom: 50px;
+
+}
