--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,45 +3,34 @@
 </div>
 <div class="menu_create" data-controller="home">
   <a class="icon-button" data-bs-toggle="modal" data-bs-target="#addGroupModal">
-  <i class="fa-solid fa-people-roof"></i>
+    <i class="fa-solid fa-people-roof"></i>
   </a>
 </div>
-
 
 <h2>My last Group</h2>
 <div class="groups-container">
   <div class="row home-groups">
     <% @groups.each do |group| %>
-        <%= link_to group_path(group), style: "text-decoration: none; color: inherit;", class: "group-card-caroussel" do %>
-          <div class="card">
-            <div class="card-body">
-              <% if group.photo.attached? %>
-                <div style="display: flex; align-items: center;">
-                  <%= image_tag url_for(group.photo), class: "image-doc", style: "margin-right: 10px;" %>
-                  <div class="doc-title" style="font-weight: bold; color: #6a1b9a;">
-
-                    <%= group.title %>
-                  </div>
+      <%= link_to group_path(group), style: "text-decoration: none; color: inherit;", class: "group-card-caroussel" do %>
+        <div class="card">
+          <div class="card-body">
+            <% if group.photo.attached? %>
+              <div style="display: flex; align-items: center;">
+                <%= image_tag url_for(group.photo), class: "image-doc", style: "margin-right: 10px;" %>
+                <div class="doc-title" style="font-weight: bold; color: #6a1b9a;">
+                  <%= group.title %>
                 </div>
-              <% end %>
-            </div>
+              </div>
+            <% end %>
           </div>
-        <% end %>
+        </div>
+      <% end %>
     <% end %>
   </div>
 </div>
 
-
-<div class="menu_create" data-controller="home">
-  <a class="icon-button" data-bs-toggle="modal" data-bs-target="#addGroupModal">
-  <i class="fa-solid fa-people-roof"></i>
-  </a>
-</div>
-
-
-
 <h2>My last Document</h2>
-<div class="doc-home" style="">
+<div class="doc-home">
   <% @documents.each do |document| %>
     <div class="mb-2">
       <%= link_to document_path(document), style: "text-decoration: none; color: inherit; display: block;" do %>
@@ -49,9 +38,8 @@
           <div class="card-body">
             <% if document.photo.attached? %>
               <div style="display: flex; align-items: center;">
-                <%= image_tag url_for(document.photo), class: "image-doc", style: "margin-right: 10px;" %>
+                <%= image_tag url_for(document.photo), class: "image-doc-home", style: "margin-right: 10px;" %>
                 <div class="doc-title" style="font-weight: bold; color: #6a1b9a;">
-
                   <%= document.title %>
                 </div>
               </div>
@@ -71,6 +59,7 @@
 <a href="<%= groups_path %>" class="btn btn-outline-light">
   <h2>See all</h2>
 </a>
+
 <div class="modal fade" id="addGroupModal" tabindex="-1" aria-labelledby="addGroupModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
