--- a/app/assets/stylesheets/pages/_document.scss
+++ b/app/assets/stylesheets/pages/_document.scss
@@ -35,7 +35,7 @@ p {
 }
 
 p strong {
-  color: #6a1b9a;
+  color: white;
 }
 
 .h-40 {
@@ -68,7 +68,7 @@ p strong {
   padding: 10px;
   margin-bottom: 10px;
   font-size: 1em;
-  
+
 }
 
 .btn-primary {
