--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -97,3 +97,13 @@ input[type="submit"] {
 .doc-home {
   width: 94%;
 }
+
+.title {
+  font-family: "Inter", sans-serif;
+  color: white;
+  font-size: 35px;
+  padding-top: 80px;
+  font-style: bold;
+  width: 100%;
+  margin-left: 1em;
+}
