--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+
 <div class="top-bar" style="position: absolute; top: 0; right: 0;">
   <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" style="margin-right: 20px; margin-top: 20px;" >
 </div>
@@ -7,17 +8,17 @@
   </a>
 </div>
 
-<h2>My last Group</h2>
+<h2 class="title">My Groups</h2>
 <div class="groups-container">
   <div class="row home-groups">
     <% @groups.each do |group| %>
       <%= link_to group_path(group), style: "text-decoration: none; color: inherit;", class: "group-card-caroussel" do %>
-        <div class="card">
-          <div class="card-body">
+        <div class="card-group">
+          <div class="card-home-doc">
             <% if group.photo.attached? %>
               <div style="display: flex; align-items: center;">
                 <%= image_tag url_for(group.photo), class: "image-doc", style: "margin-right: 10px;" %>
-                <div class="doc-title" style="font-weight: bold; color: #6a1b9a;">
+                <div class="doc-title" style="font-weight: bold; color: white;">
                   <%= group.title %>
                 </div>
               </div>
@@ -29,7 +30,7 @@
   </div>
 </div>
 
-<h2>My last Document</h2>
+<h2 class="title">My last Documents</h2>
 <div class="doc-home">
   <% @documents.each do |document| %>
     <div class="mb-2">
@@ -39,14 +40,16 @@
             <% if document.photo.attached? %>
               <div style="display: flex; align-items: center;">
                 <%= image_tag url_for(document.photo), class: "image-doc-home", style: "margin-right: 10px;" %>
-                <div class="doc-title" style="font-weight: bold; color: #6a1b9a;">
-                  <%= document.title %>
+                <div>
+                  <div class="doc-title" style="font-weight: bold; color: white;">
+                    <%= document.title %>
+                  </div>
+                  <% if document.group %>
+                    <div class="group-title" style="margin-top: 10px; color: white;">
+                      <p style="color: white;"><strong>Group:</strong> <%= document.group.title %></p>
+                    </div>
+                  <% end %>
                 </div>
-              </div>
-            <% end %>
-            <% if document.group %>
-              <div class="group-title" style="margin-top: 10px; color: #8A2BE2;">
-                <p><strong>Group:</strong> <%= document.group.title %></p>
               </div>
             <% end %>
           </div>
