--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -41,7 +41,7 @@
       font-size: 2rem;
       color: #fff;
       background-color: #3855ea;
-      border: none;
+      border: solid;
       border-radius: 50px;
     }
   </style>
