--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,6 +9,16 @@ body {
   background: #f0f0f0;
 }
 
+.fixed-bottom-icons {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  width: calc(100% - 40px);
+}
+
 .icon-button {
   text-decoration: none;
   color: inherit;
@@ -25,7 +35,7 @@ body {
   border-radius: 50%;
   padding: 0px;
   padding: 10px;
-  
+
   .fa-plus {
     font-size: 40px !important;
   }
